[project]
name = "aiocluster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["protobuf>=5.28.3"]

[dependency-groups]
dev = [
  "mypy-protobuf>=3.6.0",
  "ipdb>=0.13.13",
  "ipython>=8.29.0",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
[tool.ruff.lint.per-file-ignores]
# skip auto generated protobuf files
"aioc/protos/messages_pb2.py" = ["E", "UP", "B", "SIM", "I"]
"aioc/protos/messages_pb2.pyi" = ["E", "UP", "B", "SIM", "I"]

[tool.ruff.lint.isort]
force-single-line = true
split-on-trailing-comma = true
