[project]
name = "aiocluster"
version = "0.1.0"
description = "aiocluster"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["protobuf>=5.28.3"]
license = { file = "LICENSE" }
keywords = ["gossip", "chitchat", "aiocluster", "ScuttleButt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: System :: Distributed Computing",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Framework :: AsyncIO",
]
authors = [{ name = "Nickolai Novik", email = "nickolainovik@gmail.com" }]

[dependency-groups]
dev = [
  "mypy-protobuf>=3.6.0",
  "ipdb>=0.13.13",
  "ipython>=8.29.0",
  "mypy>=1.13.0",
  "pytest>=8.3.3",
  "ruff>=0.7.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "UP", "B", "SIM", "I", "ASYNC", "FBT", "A", "COM", "LOG"]
[tool.ruff.lint.per-file-ignores]
# skip auto generated protobuf files
"aiocluster/protos/messages_pb2.py" = ["ALL"]
"aiocluster/protos/messages_pb2.pyi" = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
split-on-trailing-comma = true
